added JWT authorization

--- a/UI/appsettings.json
+++ b/UI/appsettings.json
@@ -1,20 +1,24 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-FO8BPCL\\SQLEXPRESS;Database=BlackJack;Trusted_Connection=True;MultipleActiveResultSets=true"
+  "AppSettings": {
+    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
+  
+    "ConnectionStrings": {
+      "DefaultConnection": "Server=DESKTOP-FO8BPCL\\SQLEXPRESS;Database=BlackJack;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
+    "Logging": {
+      "LogLevel": {
+        "Default": "Warning"
+      }
+    },
+    "AllowedHosts": "*",
+    "iisSettings": {
+      "windowsAuthentication": true,
+      "anonymousAuthentication": false,
+      "iisExpress": {
+        "applicationUrl": "http://localhost:52171/",
+        "sslPort": 0
+      }
     }
-  },
-  "AllowedHosts": "*",
-  "iisSettings": {
-    "windowsAuthentication": true,
-    "anonymousAuthentication": false,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:52171/",
-      "sslPort": 0
-    }
-  }
 
-}
+  }
