--- a/UI/ClientApp/package.json
+++ b/UI/ClientApp/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
     "guid-typescript": "^1.0.9",
     "rxjs": "^6.3.3",
