--- a/BlackJack.BusinessLogicLayer/BlackJack.BusinessLogicLayer.csproj
+++ b/BlackJack.BusinessLogicLayer/BlackJack.BusinessLogicLayer.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BlackJack.DataAcessLayer\BlackJack.DataAcessLayer.csproj" />
+    <ProjectReference Include="..\BlackJack.DataAcessLayer\BlackJack.DataAcсessLayer.csproj" />
   </ItemGroup>
 
 </Project>
