--- a/UI/appsettings.json
+++ b/UI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AppSettings": {
-    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
+    "Secret": "Artem Trusevich + Alina Kiyko = One love"
   },
     "ConnectionStrings": {
       "DefaultConnection": "Server=DESKTOP-FO8BPCL\\SQLEXPRESS;Database=BlackJack;Trusted_Connection=True;MultipleActiveResultSets=true"
