Created ViewModels, added interseptor`s error handling,fixed bugs.

--- a/BlackJack.BusinessLogicLayer/BlackJack.BusinessLogicLayer.csproj
+++ b/BlackJack.BusinessLogicLayer/BlackJack.BusinessLogicLayer.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BlackJack.DataAcessLayer\BlackJack.DataAcсessLayer.csproj" />
+    <ProjectReference Include="..\BlackJack.ViewModels\BlackJack.ViewModels.csproj" />
   </ItemGroup>
 
 </Project>
