Fixed bugs. setup global server error handling. fixed interceptor.

--- a/BlackJack.BusinessLogicLayer/BlackJack.BusinessLogicLayer.csproj
+++ b/BlackJack.BusinessLogicLayer/BlackJack.BusinessLogicLayer.csproj
@@ -17,4 +17,10 @@
     <ProjectReference Include="..\BlackJack.ViewModels\BlackJack.ViewModels.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="System">
+      <HintPath>System</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
