--- a/UI/appsettings.json
+++ b/UI/appsettings.json
@@ -1,22 +1,13 @@
 {
   "AppSettings": {
-    "Secret": "Artem Trusevich + Alina Kiyko = One love"
+    "Secret": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem nisi quaerat minus! Neque laboriosam necessitatibus exercitationem provident ducimus, saepe placeat ea voluptatibus magnam nam eum quidem repellendus, nisi sit culpa."
   },
-    "ConnectionStrings": {
-      "DefaultConnection": "Server=DESKTOP-FO8BPCL\\SQLEXPRESS;Database=BlackJack;Trusted_Connection=True;MultipleActiveResultSets=true"
-    },
-    "Logging": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    },
-    "AllowedHosts": "*",
-    "iisSettings": {
-      "windowsAuthentication": true,
-      "anonymousAuthentication": false,
-      "iisExpress": {
-        "applicationUrl": "http://localhost:52171/",
-        "sslPort": 0
-      }
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-FO8BPCL\\SQLEXPRESS;Database=BlackJack;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Warning"
     }
   }
+}
